# fusion-control-comp

./: .gitignore  README.md  pyproject.toml
configs/: env_default.yaml  shots.yaml
docs/: reference.md
environment/: __init__.py  docker_socket_predictor.py  hfm_predictor.py  hfm_simulator.py  preprocessing.py  shot_registry.py  wrappers.py
examples/: custom_reference_reset.py  example_reward.py  run_random_policy.py  train_sb3_ppo.py  use_7d_action.py  use_flatten_observation.py
submission/: Dockerfile  README.md  inference.py  requirements.txt  run.sh  service.py  start_infer.sh
test/: check_submission.py  smoke_test_environment.py  test_submission.py
tools/: start_simulator.py  stop_simulator.py
